# SparseMatrix

./: CMakeLists.txt  README.md
header/: functions.h  matricesExamples.h  sparseMatrix.h  testFunctions.h  testSparseMatrix.h  tests.h
src/: functions.cpp  main.cpp  sparseMatrix.cpp
test/: testFunctions.cpp  testSparseMatrix.cpp  tests.cpp
